[package]
name = "fork-observer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bitcoincore-rpc = "0.19.0"
warp = "0.3"
toml = "0.9"

serde = "1.0.127"
serde_json = "1"

log = { version = "0.4.17" }
env_logger = { version = "0.11.2" }
hex = { version = "0.4" }
rusqlite = { version = "0.27.0", features = ["bundled"] }
tokio = { version = "1.46", features = [ "rt-multi-thread", "time", "sync", "macros" ] }
minreq = { version = "2.6.0", features = ["json-using-serde", "https"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
futures-util = "0.3"
petgraph = { version = "0.6.2", features = ["serde-1"] }

base64 = "0.13.1"

async-trait = "0.1.58"
bitcoin-pool-identification = "0.3.7"

[features]

strict = [] # Treat warnings as a build error.
