[package]
name = "fork-observer"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = { version = "0.4.2", features = ["server"] }
toml = "1.1"

serde = "1.0.219"
serde_json = "1"

log = { version = "0.4.17" }
env_logger = { version = "0.11.6" }
hex = { version = "0.4" }
rusqlite = { version = "0.40.0", features = ["bundled"] }
tokio = { version = "1.52", features = [ "rt-multi-thread", "time", "sync", "macros" ] }
minreq = { version = "2.14.0", features = ["json-using-serde", "https"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
futures-util = "0.3"
petgraph = { version = "0.8.2", features = ["serde-1"] }

base64 = "0.22.1"

async-trait = "0.1.89"
bitcoin-pool-identification = "0.3.7"
# Use the `ring` rustls provider (not the default aws-lc-rs) so that the whole
# dependency graph agrees on a single rustls CryptoProvider. corepc-node's
# downloader (via bitreq) pulls `rustls/ring`; mixing it with aws-lc-rs makes
# rustls unable to pick a provider and panics when downloading bitcoind in CI.
electrum-client = { version = "0.24.0", default-features = false, features = ["proxy", "use-rustls-ring"] }
corepc-client = { version = "0.16.0", features = ["client-sync"] }

[dev-dependencies]
corepc-node = { version = "0.12.0", features = ["29_0", "download"] }
warp = { version = "0.4.2", features = ["test"] }

[features]

strict = [] # Treat warnings as a build error.
